@startuml
'https://plantuml.com/sequence-diagram

class "App" as App {
    __Methods__
    +main(String[] args)
    +start(Stage primaryStage)
    __Attributes__
    Displays visual information and handles visual events
}

class "TDItemEdit" as TDItemEdit {
    __Methods__
    +addTDItem(TDList ToDoList)
    +removeTDItem(TDList ToDoList, TDItem removed)
    +editDescription(TDItem Item, String newDesc)
    __Attributes__
    Adds/deletes items to/from a list
    Edits description of an item in a list
}

class "TDListEdit" as TDListEdit {
    __Methods__
    +addTDList(ArrayList<TDList> TDLists)
    +clearTDList(TDList ToDoList)
    +getCompleteAsBoolean(String s)
    __Attributes__
    Adds a new TDList to a larger arraylist of TDLists
    Clears all items from a TDList
    Returns Boolean form of the strings "true" and "false"
}

object TDItem {
    __Methods__
    --Simple Getters--
    +getDesc()
    +getDate()
    +getComplete()
    +getCompleteAsString()
    --Simple Setters--
    +setDesc(String newDesc)
    +setDate(String newDate)
    +setComplete(Boolean newComplete)
    __Attributes__
    Each object is intended to be held within a greater list, holds a description, due date, and completion mark
}

object TDList {
    __Methods__
    --Simple Getters--
    +getTDItems()
    +getTile()
    __Attributes__
    To-Do list - holds Items to do and a title
}

App --> "TDItemEdit" : Edits items within a to-do list
App -up-> "TDListEdit" : Edits a given list
TDList -- TDItem : TDList holds TDItems
note top of TDList : Not all getters/setters were necessary for the functions of the porgram and were not included


@enduml